syntax = "proto3";

option go_package = "github.com/sinisa-andric/meridian/pkg/model";

package model;

service NameSpaceService {
  rpc SayHi(NameSpaceRequest) returns (NameSpaceResponse) {}
  rpc Check(NameSpaceRequest) returns (NameSpaceResponse) {}
  rpc Create(NameSpaceRequest) returns (NameSpaceResponse) {}
  rpc Read(NameSpaceRequest) returns (NameSpaceResponse) {}
  rpc Update(NameSpaceRequest) returns (NameSpaceResponse) {}
  rpc Delete(NameSpaceRequest) returns (NameSpaceResponse) {}
  rpc SoftDelete(NameSpaceRequest) returns (NameSpaceResponse) {}
  rpc Describe(NameSpaceRequest) returns (NameSpaceResponse) {}
}

message NameSpaceRequest {
    string data = 1;
}

message NameSpaceResponse {
  string data = 1;
}